# oligopoly

./: .gitignore  .pre-commit-config.yaml  ECONOMIC_MODEL_IMPROVEMENTS.md  MYPY_FIXES_SUMMARY.md  Makefile  README.md  alembic.ini  analyze_metrics.py  dashboard.py  docker-compose.yml  justfile  oligopoly_demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_add_runs_rounds_results_tables.py  002_add_events_table.py  003_add_params_to_runs.py
dashboard/: README.md  main.py
dashboard/static/css/: style.css
dashboard/static/js/: dashboard.js
dashboard/templates/: dashboard.html
deployment/: Dockerfile  docker-compose.yml
experiments/: README.md  cli.py  collusion_challenge.json  demo.py  demo_config.json  sample_config.json  simplified_config.json
scripts/: README.md  __init__.py  advanced_economics_demo.py  analyze_metrics.py  collusion_demo.py  dashboard.py  enhanced_economics_demo.py  epsilon_greedy_demo.py  policy_demo.py  segmented_demand_demo.py  strategy_demo.py  utils.py
src/: main.py
src/sim/: __init__.py  api_endpoints.py  bertrand.py  cli.py  collusion.py  collusion_runner.py  collusion_strategies.py  config.py  cournot.py  database.py  logging.py  metrics.py  models.py  monitoring.py  policy_shocks.py  runner.py  strategies.py  strategy_runner.py
src/sim/cli/: __init__.py  cli.py
src/sim/events/: __init__.py  event_logger.py  event_types.py  replay.py
src/sim/experiments/: __init__.py  runner.py  visualizer.py
src/sim/games/: _parsing.py  bertrand.py  cournot.py  enhanced_simulation.py
src/sim/heatmap/: __init__.py  bertrand_heatmap.py  cournot_heatmap.py
src/sim/models/: enhanced_demand.py  market_evolution.py  metrics.py  models.py  product_differentiation.py
src/sim/policy/: policy_shocks.py
src/sim/runners/: collusion_runner.py  runner.py  strategy_runner.py
src/sim/strategies/: advanced_strategies.py  collusion_strategies.py  nash_strategies.py  simplified_strategies.py  strategies.py
src/sim/validation/: __init__.py  economic_validation.py  simulation_validation.py
tests/: test_action_bounds.py  test_api_events.py  test_api_simulate.py  test_collusion.py  test_epsilon_decay.py  test_get_run.py  test_idempotency.py  test_persistence_counts.py  test_policy_integration.py  test_price_cap.py  test_q_init.py  test_q_update.py  test_repro_seed.py  test_subsidy.py  test_tax.py
tests/integration/: test_collusion_workflow.py  test_demo_outcomes.py  test_strategy_runner_workflow.py
tests/unit/: test_bandit_update.py  test_bertrand_comprehensive.py  test_bertrand_tie.py  test_bertrand_undercut.py  test_cli.py  test_cli_bertrand.py  test_consumer_surplus.py  test_cournot_input.py  test_cournot_price.py  test_cournot_profit.py  test_demand_nonneg.py  test_env.py  test_epsilon_decay.py  test_grid_bounds.py  test_health.py  test_hhi.py  test_integrated_strategies.py  test_models.py  test_randomwalk_bounds.py  test_strategies_integrated.py  test_strategy_integration.py  test_titfortat_first_round.py  test_titfortat_follow.py
tests/unit/api/: test_api_endpoints.py  test_api_endpoints_additional.py  test_api_events.py  test_api_schema.py  test_api_simulate.py  test_compare_api.py  test_compare_deltas.py  test_main_additional.py  test_main_endpoints.py  test_ui_smoke.py
tests/unit/cli/: test_basic.py  test_cli.py  test_cli_bertrand.py  test_env.py  test_health.py
tests/unit/events/: test_event_log_order.py  test_feed_api_schema.py  test_replay_sequence.py
tests/unit/experiments/: test_artifacts_path.py  test_exp_metrics.py  test_exp_seeds.py  (+1 more)
tests/unit/heatmap/: __init__.py  (+5 more)
tests/utils/: __init__.py  test_assertions.py  test_data.py  test_db.py
(+51 files in other folders)
