[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "oligopoly"
version = "0.1.0"
description = "Oligopoly Market Simulation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bangyen Pham", email = "bangyenp@gmail.com"},
]
keywords = ["oligopoly", "simulation", "economics", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "urllib3>=1.26,<2.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-python-dateutil>=2.8.0",
]

[project.scripts]
oligopoly = "main:app"
cournot = "sim.cli:cournot_main"
bertrand = "sim.cli:bertrand_main"

[project.urls]
Homepage = "https://github.com/bangyen/oligopoly"
Repository = "https://github.com/bangyen/oligopoly"
Issues = "https://github.com/bangyen/oligopoly/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["import-untyped"]

# Exclude test files from strict type checking
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "dashboard.*"
disallow_untyped_defs = false
warn_return_any = false

# Ignore missing imports for external libraries without stubs
[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "sqlalchemy.*",
    "pydantic.*",
    "pydantic_settings.*",
    "alembic.*",
    "psycopg2.*",
    "plotly.*",
    "pandas.*",
    "requests.*",
    "uvicorn.*",
    "httpx.*",
    "flask.*"
]
ignore_missing_imports = true

# Allow untyped imports for local modules
[[tool.mypy.overrides]]
module = [
    "sim.*",
    "main"
]
ignore_missing_imports = false
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]